# SC-SLAM

./: .gitignore  create_saliency_heatmap.py  plot_heatmap_map.py  view_scans_sem_change.py
python/: create_saliency_heatmap.py  extract_features.py  plot_heatmap_map.py  utils.py  view_scans_sem_change.py
src/DCL-FAST-LIO/: CMakeLists.txt  package.xml
src/DCL-FAST-LIO/include/: common_lib.h
src/DCL-FAST-LIO/src/: IMU_Processing.hpp  laserMapping.cpp  preprocess.cpp  preprocess.h
src/DCL-LIO-SAM/: CMakeLists.txt  package.xml
src/DCL-LIO-SAM/include/: utility.h
src/DCL-LIO-SAM/src/: featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp
src/DCL-SLAM/: CMakeLists.txt  package.xml
src/DCL-SLAM/config/: cyclonedds.xml  dcl_fast_lio_velodyne.yaml  dcl_fast_lio_velodyne16.yaml  dcl_lio_sam_params.yaml  dcl_lio_sam_vlp16_params.yaml  dcl_lio_sam_vlp16_params_a.yaml  dcl_lio_sam_vlp16_params_b.yaml  dcl_lio_sam_vlp16_params_c.yaml  dcl_rviz.rviz  fastdds_profile.xml
src/DCL-SLAM/config/cu_multi/: cu_multi_liosam_a.yaml  cu_multi_liosam_b.yaml  cu_multi_liosam_c.yaml  hunter_liosam.yaml
src/DCL-SLAM/dcl_output/: a_distributed_mapping.INFO  a_distributed_mapping.TheHomeMachine.invalid-user.log.INFO.20260330-101542.43000  a_distributed_mapping.TheHomeMachine.invalid-user.log.INFO.20260330-101937.44993  a_distributed_mapping.TheHomeMachine.invalid-user.log.INFO.20260330-103036.48454  a_distributed_mapping.TheHomeMachine.invalid-user.log.INFO.20260330-115337.48895  a_distributed_mapping.TheHomeMachine.invalid-user.log.INFO.20260330-120403.49330  a_distributed_mapping.TheHomeMachine.invalid-user.log.INFO.20260330-120526.49769  a_distributed_mapping.TheHomeMachine.invalid-user.log.INFO.20260330-155440.50251  a_distributed_mapping.TheHomeMachine.invalid-user.log.INFO.20260330-155623.50515  b_distributed_mapping.INFO  b_distributed_mapping.TheHomeMachine.invalid-user.log.INFO.20260330-101542.43026  b_distributed_mapping.TheHomeMachine.invalid-user.log.INFO.20260330-101937.45027  b_distributed_mapping.TheHomeMachine.invalid-user.log.INFO.20260330-103036.48485  b_distributed_mapping.TheHomeMachine.invalid-user.log.INFO.20260330-115337.48919  b_distributed_mapping.TheHomeMachine.invalid-user.log.INFO.20260330-120403.49360  b_distributed_mapping.TheHomeMachine.invalid-user.log.INFO.20260330-120526.49795  b_distributed_mapping.TheHomeMachine.invalid-user.log.INFO.20260330-155440.50277  c_distributed_mapping.INFO  c_distributed_mapping.TheHomeMachine.invalid-user.log.INFO.20260330-101542.43051  c_distributed_mapping.TheHomeMachine.invalid-user.log.INFO.20260330-101937.45048  c_distributed_mapping.TheHomeMachine.invalid-user.log.INFO.20260330-103036.48512  c_distributed_mapping.TheHomeMachine.invalid-user.log.INFO.20260330-115337.48949  c_distributed_mapping.TheHomeMachine.invalid-user.log.INFO.20260330-120403.49385  c_distributed_mapping.TheHomeMachine.invalid-user.log.INFO.20260330-120526.49819  c_distributed_mapping.TheHomeMachine.invalid-user.log.INFO.20260330-155440.50308  consistency_matrix_b.clq.mtx  consistent_loop_closures_b.txt  consistent_loop_closures_c.txt
src/DCL-SLAM/include/: descriptorBasis.h  distributedMapping.h  labelAwareRegistration.h  paramsServer.h
src/DCL-SLAM/launch/: run.launch.py  run_cumulti.launch.py  run_cumulti_multiple.launch.py  run_kitti.launch.py  run_large.launch.py  single_ugv.launch.py  single_ugv_cumulti.launch.py  single_ugv_kitti.launch.py
src/DCL-SLAM/msg/: GlobalDescriptor.msg  LoopInfo.msg
src/DCL-SLAM/rviz/: cu_multi.rviz
src/DCL-SLAM/scripts/: analyze_loop_closures.py  view_logs.md
src/DCL-SLAM/src/: distributedLoopClosure.cpp  distributedMapping.cpp  distributedMappingBasis.cpp  distributedMappingVisualization.cpp  lidarIrisDescriptor.cpp  loopVisualizationNode.cpp  m2dpDescriptor.cpp  paramsServer.cpp  scanContextDescriptor.cpp
src/distributed_mapper_ros/: CMakeLists.txt  package.xml
src/distributed_mapper_ros/include/distributed_mapper/: distributed_mapper.h
src/distributed_mapper_ros/src/distributed_mapper/: distributed_mapper.cpp  evaluation_utils.cpp
src/distributed_mapper_ros/src/pairwise_consistency_maximization/global_map/: global_map.cpp
